--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@upstash/redis": "^1.34.9",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "multer": "^2.0.0"
