--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "openai": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
